[workspace]
resolver = "2"
members = [
    "zenoh-ros-macro",
    "zenoh-ros-type",
]

[workspace.package]
authors = ["ChenYing Kuo <evshary@gmail.com>"]
description = "Common Rust struct for ROS 2 messages used by Zenoh"
documentation = "https://docs.rs/zenoh-ros-type/"
edition = "2021"
homepage = "https://github.com/evshary/zenoh-ros-type"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/evshary/zenoh-ros-type"
version = "0.3.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
