[workspace]
resolver = "2"
members = [
    "zenoh-ros-derive",
    "zenoh-ros-type",
    "examples",
]

[workspace.package]
authors = ["ChenYing Kuo <evshary@gmail.com>"]
description = "Common Rust struct for ROS 2 messages used by Zenoh"
documentation = "https://docs.rs/zenoh-ros-type/"
edition = "2021"
homepage = "https://github.com/evshary/zenoh-ros-type"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/evshary/zenoh-ros-type"
version = "0.3.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cdr = "0.2.4"
serde = "1.0.216"
serde_derive = "1.0.216"
zenoh = { version = "1.1.0", features = [
  "unstable",
] }
zenoh-ros-derive = { path = "zenoh-ros-derive" }
zenoh-ros-type = { path = "zenoh-ros-type" }
