[package]
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
name = "zenoh-ros-type-examples"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
rand = { workspace = true }
zenoh = { workspace = true }
zenoh-ros-type = { workspace = true }
