[package]
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
name = "zenoh-ros-derive"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
