[package]
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
name = "zenoh-ros-type"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
cdr = "0.2.4"
serde = "1.0.216"
serde_derive = "1.0.216"
zenoh = { version = "1.1.0", features = [
  "unstable",
] }
zenoh-ros-macro = { path = "../zenoh-ros-macro" }
