[package]
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
name = "zenoh-ros-type"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
cdr = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
zenoh = { workspace = true }
zenoh-ros-derive = { workspace = true }
